# Coherence

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  BIOLOGICAL_CONCEPTS_CURRICULUM.md  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  FINAL_CLEANUP_ASSESSMENT.md  GEMINI.md  LICENSE  NEUROMORPHIC_POC_SPECIFICATION.md  PHILOSOPHY.md  README.md  RESEARCH_DETAILED.md  SECURITY.md  advanced_english_learning_report.json  balanced_competitive_results.json  comprehensive_sentence_learning_report.json  comprehensive_test_report.json  debug_line_862.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_gpu.txt  requirements_jetson.txt  ruff.toml  run_tests.py  simple_english_test_results.json  test_results_attention_mechanism.txt  test_results_developmental_plasticity.txt  test_results_working_memory.txt  test_summary.txt  tests  vscode-extensions.txt  working_english_learning_report.json
.github/: copilot-instructions.md  dependabot.yml
api/: __init__.py  neuromorphic_api.py  neuromorphic_system.py
archive/: README.md
benchmark_results/: benchmark_details_20250810_124501.json  benchmark_details_20250819_182839.json  benchmark_details_20250819_183002.json  benchmark_details_20250819_183157.json  benchmark_details_20250819_183314.json  benchmark_details_20250819_183537.json  benchmark_details_20250819_183846.json  benchmark_results_20250810_124501.csv  benchmark_results_20250819_182839.csv  benchmark_results_20250819_183002.csv  benchmark_results_20250819_183157.csv  benchmark_results_20250819_183314.csv  benchmark_results_20250819_183537.csv  benchmark_results_20250819_183846.csv  latest_report.md  microbenchmark_timeit.csv  quick_benchmark_20250809_122043.csv  quick_benchmark_20250809_122819.csv  quick_benchmark_20250809_123055.csv  quick_benchmark_20250810_130119.csv  quick_benchmark_20250810_132402.csv  quick_benchmark_20250810_133113.csv  quick_benchmark_20250810_135231.csv  quick_benchmark_20250810_144351.csv  quick_benchmark_20250810_174648.csv  quick_benchmark_20250810_184004.csv
benchmarks/: README.md  benchmark_high_performance.py  benchmark_results_cpu.txt  benchmark_results_performance.txt  benchmark_results_quick.txt  benchmark_summary.txt  cpu_performance_benchmark.py  generate_report.py  gpu_benchmark_rtx3060.py  high_performance_benchmark.py  performance_benchmarks.py  pytest_benchmarks.py  quick_benchmark.py  run_all_benchmarks.py  run_benchmarks.py  run_benchmarks_to_file.py  visualize_benchmarks.py
configs/: .codecov.yml  .pre-commit-config.yaml  docstring_audit_report.csv  docstring_audit_report.json  docstring_priorities.json  learning_config.json  learning_config.yaml
core/: __init__.py  adaptive_feature_learning.py  advanced_english_learning.py  attention_mechanism.py  auditory_processing_hierarchy.py  balanced_competitive_learning.py  brain_topology.py  comprehensive_sentence_learning.py  developmental_plasticity.py  encoding.py  enhanced_encoding.py  enhanced_logging.py  enhanced_symbol_detection.py  error_handling.py  gpu_massive_scale.py  gpu_neurons.py  gpu_scaling.py  hierarchical_sensory_processing.py  high_performance_network.py  interactive_conversation.py  large_scale_validation.py  learning.py  logging_utils.py  memory.py  multi_timescale_learning.py  multimodal_integration.py  network.py  neural_oscillation_analysis.py  neuromodulation.py  neurons.py  pathology_simulator.py  py.typed  robustness_testing.py  security_manager.py  seizure_activity_model.py  symbol_emergence.py  synapses.py  task_complexity.py  vectorized_neurons.py  vectorized_synapses.py  (+3 more)
demo/: complete_language_ai.py  demo_advanced_english.py  english_letter_demo.py  enhanced_comprehensive_demo.py  final_working_demo.py  gpu_analysis_demo.py  gpu_large_scale_demo.py  jetson_demo.py  large_scale_validation_demo.py  neuromorphic_language_ai.py  sensorimotor_demo.py  sensorimotor_training.py  symbol_emergence_demo.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_DIRECTORIES_SUMMARY.md  CONTRIBUTING.md  DOCKER.md  DOCSTRING_AUDIT_README.md  DOCS_AUDIT_REPORT.md  JETSON_DEPLOYMENT.md  MANIFEST.in  Makefile  TUTORIAL.md  balanced_competitive_learning_tutorial.md  docstring_audit_report.md  docstring_update_summary.md  learning_plasticity.md  memory_subsystem.md  setup.cfg  setup.py  step5_completion_summary.md
docs/examples/: image_encoding_example.ipynb  image_encoding_example.py  stdp_learning_example.py
docs/source/: api.rst  conf.py  core.rst  engine.rst  index.rst  modules.rst  test_engine.rst  test_memory_subsystem.rst  tests.rst  verify_installation.rst
docs/tutorials/: 01_getting_started.md  02_sensory_encoding.md  03_learning_plasticity.md  05_edge_deployment.md
examples/: pattern_completion_demo.py  sequence_learning_demo.py  sleep_cycle_demo.py  test_learning.py
experiments/: breakthrough_learning_demo.py  bypass_learning_demo.py  core_test.py  debug_learning_demo.py  extreme_scale_stress_test.py  find_gpu_limit.py  fixed_letter_recognizer.py  functional_learning_demo.py  large_scale_learning_demo.py  learning_assessment.py  minimal_spike_test.py  optimal_gpu_learning.py  optimized_learning_demo.py  pure_learning_simulation.py  real_learning_demo.py  shape_learning_demo.py  simple_learning_success.py  simple_letter_recognizer.py  spike_debug.py  test_massive_scale_verification.py  trained_letter_recognizer.py  working_learning_demo.py
scripts/: analyze_audit_results.py  audit_docstrings.py  browse_docstring_issues.py  check_quality.py  compare_capabilities.py  docker-publish.ps1  docker-publish.sh  gpu_optimization.py  jetson_optimization.py  jetson_setup.sh  run_tests.py  tmp_probe2.py
tests/: README.md  __init__.py  network_diagnostic.py  simple_english_test.py  test_adaptive_feature_learning.py  test_advanced_english_learning.py  test_attention_mechanism.py  test_auditory_processing_hierarchy.py  test_developmental_plasticity.py  test_distance_dependent_connectivity.py  test_dopamine_neuromodulation.py  test_encoding.py  test_encoding_simple.py  test_enhanced_ei_balance.py  (+31 more)
(+93 files in other folders)
