# setup.cfg - Additional configuration for setuptools
# This file provides backward compatibility and additional configuration
# Main configuration is in pyproject.toml (PEP 621)

[metadata]
# Most metadata is now in pyproject.toml
# This section is kept for backward compatibility
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
zip_safe = False
python_requires = >=3.8
include_package_data = True

[options.extras_require]
# Defined in pyproject.toml but kept here for compatibility
testing = 
    pytest>=7.0.0
    pytest-cov>=3.0.0
    pytest-xdist>=2.5.0
    pytest-timeout>=2.1.0

[options.package_data]
# Additional package data patterns
* = 
    *.json
    *.yaml
    *.yml
    *.txt
    *.md
    *.cfg
    *.ini

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0

[aliases]
test = pytest

[tool:pytest]
# Pytest configuration (also in pyproject.toml)
norecursedirs = 
    .git
    .tox
    dist
    build
    *.egg
    venv
    venv_neuron
    archive

[flake8]
# Flake8 configuration
max-line-length = 88
extend-ignore = E203, E266, E501, W503
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = 
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .eggs,
    *.egg,
    venv*,
    .venv*,
    archive

[pydocstyle]
# Docstring style checking
inherit = false
ignore = D100,D101,D102,D103,D104,D105,D106,D107,D203,D213
match-dir = (?!tests|venv|archive).*
match = .*\.py

[codespell]
# Spell checking configuration
skip = .git,*.pdf,*.svg,venv*,.venv*,build,dist,*.egg-info
check-hidden = true
ignore-words-list = nd,reacher,thru,hist

[bandit]
# Security linting
exclude = /tests,/venv*,/.venv*,/archive
tests = B201,B301
skips = B101,B601
